--- a/index.html
+++ b/index.html
@@ -1,111 +1,95 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>MalukuInfraZone</title>
-<meta name="description" content="Portal data dan peta infrastruktur BPBPK Maluku">
-<link rel="icon" href="images/logo-pu.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>MalukuInfraZone</title>
+  <meta name="description" content="Portal data dan peta infrastruktur BPBPK Maluku">
+  <link rel="icon" href="images/logo-pu.png">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Montserrat:wght@600;800&display=swap" rel="stylesheet">
 
-<style>
-  :root{
-    --dark-bg: #0b0f17;
-    --dark-glass: rgba(11,15,23,0.78);
-    --muted:#9fb0c6;
-    --navy:#0f3556;
-    --panel:#f5f8fc;
-    --card-bg:#ffffff;
-    --accent:#f3b41f;
-    --accent-strong:#ffb400;
-    --info:#2b9cff;
-    --danger:#e04b4b;
-    --radius:8px;
-    --gap:22px;
-    --font-sans: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  }
+  <style>
+/* --- MULAI STYLING RAPI --- */
+:root{
+  --dark-bg:#0b0f17;
+  --dark-glass:rgba(11,15,23,0.78);
+  --muted:#9fb0c6;
+  --navy:#0f3556;
+  --panel:#f5f7fb;
+  --card-bg:#ffffff;
+  --accent:#f3b41f;
+  --accent-strong:#ffb400;
+  --info:#2b9cff;
+  --muted-strong:#5b6b7a;
+  --radius:8px;
+  --gap:18px;
+  --font-sans:"Poppins", system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+}
 
-  html,body{height:100%;margin:0;font-family:var(--font-sans);background:var(--dark-bg);color:#fff;padding-top:72px;}
-  a{color:inherit;text-decoration:none}
+html,body{height:100%;margin:0;font-family:var(--font-sans);background:var(--dark-bg);color:#fff;padding-top:72px}
+a{color:inherit;text-decoration:none}
 
-  /* header */
-  header{position:fixed;left:0;right:0;top:0;z-index:60;padding:14px 28px;display:flex;align-items:center;justify-content:space-between;background:var(--dark-glass);backdrop-filter:blur(6px);border-bottom:1px solid rgba(255,255,255,0.02)}
-  .brand{display:flex;align-items:center;gap:14px}
-  .brand img{height:44px}
-  .title-site{font-family:'Montserrat';font-weight:800;font-size:20px;color:#fff}
-  nav a{margin-left:18px;font-weight:600;color:#fff;opacity:0.95}
-  nav a:hover{color:var(--info)}
-  .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 12px;border-radius:6px;color:#fff}
+/* header */
+header{position:fixed;left:0;right:0;top:0;z-index:60;padding:14px 22px;display:flex;align-items:center;justify-content:space-between;background:var(--dark-glass);backdrop-filter:blur(6px)}
+.brand{display:flex;align-items:center;gap:14px}
+.brand img{height:42px}
+.title-site{font-family:'Montserrat';font-weight:800;font-size:20px;color:#fff}
+nav a{margin-left:18px;font-weight:600;color:#fff;opacity:0.95}
+nav a:hover{color:var(--info)}
+.btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 12px;border-radius:6px;color:#fff}
 
-  /* hero */
-  .hero{height:86vh;background:url('images/background-maluku.jpg') center/cover no-repeat;display:flex;align-items:center;justify-content:center;position:relative}
-  .hero::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(2,6,23,0.55), rgba(2,6,23,0.78));}
-  .hero-inner{position:relative;z-index:2;text-align:center;max-width:920px;padding:24px}
-  .hero h1{font-family:'Montserrat';font-size:44px;margin:0;font-weight:800;line-height:1;color:#fff}
-  .hero p{margin-top:10px;color:var(--muted);font-size:16px}
-  .hero .cta{display:inline-block;margin-top:20px;padding:12px 20px;border-radius:999px;background:var(--info);color:#021129;font-weight:700}
+/* hero */
+.hero{height:62vh;background:url('images/background-maluku.jpg') center/cover no-repeat;display:flex;align-items:center;justify-content:center;position:relative}
+.hero::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(2,6,23,0.55), rgba(2,6,23,0.78));}
+.hero-inner{position:relative;z-index:2;text-align:center;max-width:860px;padding:18px}
+.hero h1{font-family:'Montserrat';font-size:40px;margin:0;font-weight:800}
+.hero p{margin-top:8px;color:var(--muted);font-size:15px}
+.cta{display:inline-block;margin-top:20px;padding:12px 20px;border-radius:999px;background:var(--info);color:#021129;font-weight:700}
 
-  /* sections */
-  .section{padding:58px 20px;max-width:1160px;margin:0 auto}
-  .sectors h2{color:#fff;font-family:'Montserrat';font-weight:800;margin-bottom:22px}
-  .sector-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px}
-  .sector-card{background:#0f1720;padding:20px;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.6);text-align:center}
-  .sector-card h3{color:var(--accent);margin:12px 0 8px;font-size:18px}
-  .sector-card p{color:var(--muted);font-size:14px;margin:0}
+/* sectors */
+.section{padding:58px 20px;max-width:1160px;margin:0 auto}
+.sectors h2{color:#fff;font-family:'Montserrat';font-weight:800;margin-bottom:22px}
+.sector-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:14px}
+.sector-card{background:#0f1720;padding:18px;border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,0.5);text-align:center;display:flex;flex-direction:column;align-items:center;gap:8px}
+.sector-card img{width:44px;height:44px;object-fit:contain}
+.sector-card h3{color:var(--accent);margin:6px 0 2px;font-size:16px}
+.sector-card p{color:var(--muted);margin:0;font-size:13px}
 
-  /* dashboard wrapper (light) */
-  .dashboard-wrap{background:var(--panel);color:#122;padding:32px 20px;border-top-left-radius:16px;border-top-right-radius:16px}
-  .dash-header{display:flex;align-items:flex-start;justify-content:space-between;gap:12px;margin-bottom:18px}
-  .dash-title-main{font-family:'Montserrat';font-weight:800;color:var(--navy);margin:0;font-size:18px}
-  .dash-sub{color:var(--muted);font-size:13px;margin-top:6px}
+/* dashboard wrapper */
+.dashboard{background:var(--panel);color:#222;padding:28px 16px;border-top-left-radius:12px;border-top-right-radius:12px}
+.container{max-width:1100px;margin:0 auto}
+.dashboard-banner{background:linear-gradient(90deg,var(--navy),#123b66);color:#fff;padding:14px 16px;border-radius:8px;margin-bottom:12px}
 
-  /* grid cards style - emulate sample */
-  .cards-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:22px;margin-bottom:18px}
-  .cards-bottom{display:grid;grid-template-columns:repeat(2,1fr);gap:22px}
+/* card grid compact */
+.cards-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
+.cards-bottom{display:grid;grid-template-columns:repeat(2,1fr);gap:14px}
 
-  .card{
-    background:var(--card-bg);
-    border:8px solid #e6e8ec;
-    border-radius:6px;
-    overflow:hidden;
-    box-shadow:0 8px 22px rgba(16,26,40,0.06);
-  }
-  .card .card-head{
-    background:var(--navy);
-    color:#fff;
-    padding:16px 12px;
-    text-align:center;
-  }
-  .card .card-head h4{margin:0;font-size:15px;font-family:'Montserrat';font-weight:800;line-height:1.05}
-  .card .card-head .meta{color:#d6e8fb;margin-top:8px;font-size:13px}
-  .card .card-head .invest{color:var(--accent-strong);font-weight:800;margin-top:6px}
+/* card compact */
+.card{background:var(--card-bg);border:6px solid #e6e8ec;border-radius:6px;overflow:hidden;box-shadow:0 6px 18px rgba(16,26,40,0.06)}
+.card-head{background:var(--navy);color:#fff;padding:12px 10px;text-align:center}
+.card-head h4{margin:0;font-family:'Montserrat';font-weight:800;font-size:14px;line-height:1.05}
+.card-head .meta{color:#d6e8fb;margin-top:6px;font-size:12px}
+.card-head .invest{color:var(--accent-strong);font-weight:700;margin-top:6px;font-size:13px}
 
-  .card .body{padding:12px;border-top:6px solid #e8eef6;background:linear-gradient(180deg,#fff,#f7f9ff)}
-  .card .section-title{background:var(--navy);color:#fff;padding:8px 12px;font-weight:700;margin:-12px -12px 8px -12px;font-size:13px}
-  .card table{width:100%;border-collapse:collapse;font-size:13px}
-  .card td{padding:8px 10px;border-bottom:1px solid #eef3fb}
-  .card .k{color:#24333f}
-  .card .v{color:var(--muted);text-align:right}
-  .card .highlight{color:var(--accent);font-weight:800}
+.body{padding:10px;border-top:6px solid #e8eef6;background:linear-gradient(180deg,#fff,#f6f9ff)}
+.section-title{background:var(--navy);color:#fff;padding:6px 10px;font-weight:700;margin:-10px -10px 8px -10px;font-size:12px}
+.card table{width:100%;border-collapse:collapse;font-size:13px}
+.card td{padding:6px 8px;border-bottom:1px solid #eef3fb}
+.card .k{color:#24333f}
+.card .v{color:var(--muted-strong);text-align:right}
 
-  /* stronger emphasis for numeric */
-  .num{color:var(--accent-strong);font-weight:800}
+/* angka utama: gelap, tebal, jelas */
+.num{color:#0b2135;font-weight:900;font-size:15px}
+.invest-strong{color:#0b2135;font-weight:800}
 
-  /* responsive */
-  @media(max-width:1000px){.cards-grid{grid-template-columns:repeat(2,1fr)}.cards-bottom{grid-template-columns:1fr}}
-  @media(max-width:640px){.cards-grid{grid-template-columns:1fr}}
-
-  /* dashboard-banner when user clicks nav */
-  .dashboard-banner{
-    background:linear-gradient(90deg,var(--navy),#123b66);
-    color:#fff;padding:18px 20px;border-radius:8px;margin-bottom:18px
-  }
-  .dashboard-banner h3{margin:0;font-size:16px;font-weight:800}
-  .dashboard-banner p{margin:6px 0 0;color:rgba(255,255,255,0.9);font-size:13px}
-</style>
+/* responsive */
+@media(max-width:1000px){.cards-grid{grid-template-columns:repeat(2,1fr)}.cards-bottom{grid-template-columns:1fr}}
+@media(max-width:640px){.cards-grid{grid-template-columns:1fr}}
+/* --- SELESAI STYLING RAPI --- */
+  </style>
 </head>
 <body>
 
@@ -142,61 +126,55 @@
 </section>
 
 <!-- DASHBOARD -->
-<section id="dashboard" class="dashboard-wrap">
+<section id="dashboard" class="dashboard">
   <div class="container">
-
-    <!-- banner yang muncul saat klik Dashboard -->
     <div id="dashboard-banner" class="dashboard-banner" style="display:none">
       <h3 id="banner-title">Rekapitulasi Status Keberfungsian Infrastruktur</h3>
-      <p id="banner-sub">Filter: Tahun Anggaran 2020-2024</p>
+      <p id="banner-sub">Tahun Anggaran 2020-2024</p>
     </div>
 
-    <!-- REGULER -->
-    <div class="dash-header">
+    <div style="display:flex;justify-content:space-between;align-items:flex-start;gap:12px;margin-bottom:8px">
       <div>
-        <h2 class="dash-title-main">Rekapitulasi Status Keberfungsian Infrastruktur Reguler Terbangun Tahun Anggaran 2020-2024</h2>
-        <div class="dash-sub">Ringkasan status, kapasitas, dan nilai investasi per sektor.</div>
+        <h2 style="margin:0;font-family:Montserrat;font-weight:800;color:#0f3556;font-size:18px">
+          Rekapitulasi Status Keberfungsian Infrastruktur Reguler Terbangun Tahun Anggaran 2020-2024
+        </h2>
+        <div style="color:#5b6b7a;font-size:13px;margin-top:6px">Ringkasan status, kapasitas, dan nilai investasi per sektor.</div>
       </div>
-      <div style="display:flex;gap:8px;align-items:center">
+      <div>
         <button id="refresh-reg" class="btn-ghost">Refresh</button>
       </div>
     </div>
 
-    <div id="cards-reg" class="cards-grid" aria-live="polite">
-      <!-- 5 kartu reguler akan terisi -->
-    </div>
+    <div id="cards-reg" class="cards-grid" aria-live="polite"></div>
 
-    <!-- IBM -->
-    <div style="height:20px"></div>
-    <div class="dash-header" style="margin-top:8px">
+    <div style="height:18px"></div>
+
+    <div style="display:flex;justify-content:space-between;align-items:flex-start;gap:12px;margin-bottom:8px;margin-top:6px">
       <div>
-        <h2 class="dash-title-main">Rekapitulasi Status Keberfungsian Infrastruktur IBM Terbangun Tahun Anggaran 2020-2024</h2>
-        <div class="dash-sub">Program IBM, kapasitas, status berfungsi, dan nilai investasi.</div>
+        <h2 style="margin:0;font-family:Montserrat;font-weight:800;color:#0f3556;font-size:18px">
+          Rekapitulasi Status Keberfungsian Infrastruktur IBM Terbangun Tahun Anggaran 2020-2024
+        </h2>
+        <div style="color:#5b6b7a;font-size:13px;margin-top:6px">Program IBM, kapasitas, status berfungsi, dan nilai investasi.</div>
       </div>
-      <div style="display:flex;gap:8px;align-items:center">
+      <div>
         <button id="refresh-ibm" class="btn-ghost">Refresh</button>
       </div>
     </div>
 
-    <div id="cards-ibm" class="cards-grid" aria-live="polite">
-      <!-- 5 kartu ibm akan terisi -->
-    </div>
+    <div id="cards-ibm" class="cards-grid" aria-live="polite"></div>
 
-    <!-- bottom small cards for IBM extra (two) -->
-    <div style="height:18px"></div>
-    <div id="cards-ibm-bottom" class="cards-bottom">
-      <!-- two small cards -->
-    </div>
+    <div style="height:14px"></div>
+    <div id="cards-ibm-bottom" class="cards-bottom"></div>
 
   </div>
 </section>
 
-<footer style="text-align:center;padding:28px;color:var(--muted);background:var(--dark-bg);">
+<footer style="text-align:center;padding:28px;color:var(--muted);background:var(--dark-bg)">
   &copy; 2025 MalukuInfraZone - BPBPK Maluku.
 </footer>
 
 <script>
-/* Utility: load JSON from /data */
+/* util: load JSON */
 async function loadJSON(path){
   try{
     const r = await fetch(path, {cache: "no-store"});
@@ -222,9 +200,8 @@ function formatInvest(v){
   return String(v);
 }
 
-/* create one card DOM string (matches sample visual) */
+/* compact card builder: menggunakan kelas num & invest-strong */
 function cardHTML(title, jumlah, investasi, utilisasiRows, statusRows){
-  // ensure five util rows area but show only provided
   const utilHtml = (utilisasiRows && utilisasiRows.length) ? utilisasiRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('') : `<tr><td class="k">-</td><td class="v">-</td></tr>`;
   const statusHtml = (statusRows && statusRows.length) ? statusRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('') : `<tr><td class="k">-</td><td class="v">-</td></tr>`;
   return `
@@ -232,26 +209,25 @@ function cardHTML(title, jumlah, investasi, utilisasiRows, statusRows){
       <div class="card-head">
         <h4>${title}</h4>
         <div class="meta">Jumlah <span class="num">${jumlah||'-'}</span></div>
-        <div class="invest">${investasi||'Rp 0'}</div>
+        <div class="invest invest-strong">${investasi||'Rp 0'}</div>
       </div>
       <div class="body">
         <div class="section-title">Utilisasi</div>
         <table>${utilHtml}</table>
       </div>
-      <div class="body" style="padding-top:8px">
+      <div class="body" style="padding-top:6px">
         <div class="section-title">Status Keberfungsian</div>
         <table>${statusHtml}</table>
       </div>
     </div>`;
 }
 
-/* map JSON object to card fields */
+/* map JSON object to fields */
 function mapToFields(item){
-  const title = pick(item, ['Sektor','Program','Nama']) || pick(item,['Nama Program']) || 'Sektor';
+  const title = pick(item, ['Sektor','Program','Nama','Nama Program']) || 'Sektor';
   const jumlahRaw = pick(item, ['Jumlah Unit','Jumlah','Unit']) || '-';
   const jumlah = String(jumlahRaw);
   const investasi = formatInvest(pick(item, ['Nilai Investasi (Miliar)','Nilai Investasi','Investasi']));
-  // build utilisasi rows
   const util = [];
   const kt = pick(item, ['Kapasitas Terpasang','Kapasitas terpasang']);
   const kp = pick(item, ['Kapasitas Terpakai','Kapasitas terpakai']);
@@ -263,7 +239,6 @@ function mapToFields(item){
   if(idle!==null) util.push(['Idle Capacity', String(idle)]);
   if(luasPen!==null) util.push(['Luas Penanganan', String(luasPen)]);
   if(luasKaw!==null) util.push(['Luas Total Kawasan', String(luasKaw)]);
-  // status
   const berf = pick(item, ['Berfungsi','Berfungsi Unit','Jumlah Berfungsi']);
   const tbf = pick(item, ['Tidak Berfungsi','Tidak Berfungsi Unit','Jumlah Tidak Berfungsi']);
   const status = [
@@ -273,7 +248,7 @@ function mapToFields(item){
   return { title, jumlah, investasi, util, status };
 }
 
-/* render 5 cards; fill with placeholders if kurang */
+/* render 5 cards, isi placeholder bila kurang */
 function renderCards(containerId, dataArray){
   const container = document.getElementById(containerId);
   container.innerHTML = '';
@@ -284,13 +259,12 @@ function renderCards(containerId, dataArray){
       const f = mapToFields(item);
       container.insertAdjacentHTML('beforeend', cardHTML(f.title, f.jumlah, f.investasi, f.util, f.status));
     } else {
-      // placeholder empty card to preserve layout
       container.insertAdjacentHTML('beforeend', cardHTML('Kosong','-','Rp 0',[],[['Berfungsi','-'],['Tidak Berfungsi','-']]));
     }
   }
 }
 
-/* render bottom small cards (2) for IBM extra */
+/* render bottom two (IBM extra) */
 function renderBottomTwo(containerId, dataArray){
   const container = document.getElementById(containerId);
   container.innerHTML = '';
@@ -310,30 +284,17 @@ function renderBottomTwo(containerId, dataArray){
 async function loadAndRender(){
   const reg = await loadJSON('data/rekap_reguler.json');
   const ibm = await loadJSON('data/rekap_ibm.json');
-
-  // ensure object arrays
-  const regList = Array.isArray(reg) ? reg : [];
-  const ibmList = Array.isArray(ibm) ? ibm : [];
-
-  // render first 5 reguler
-  renderCards('cards-reg', regList);
-
-  // render first 5 ibm
-  renderCards('cards-ibm', ibmList);
-
-  // render bottom two extras for ibm (if available)
-  renderBottomTwo('cards-ibm-bottom', ibmList);
+  renderCards('cards-reg', reg);
+  renderCards('cards-ibm', ibm);
+  renderBottomTwo('cards-ibm-bottom', ibm);
 }
 
-/* banner toggle on nav click */
+/* show banner when nav clicked */
 document.getElementById('nav-dashboard').addEventListener('click', function(e){
-  // show banner and set text
   const banner = document.getElementById('dashboard-banner');
   document.getElementById('banner-title').textContent = 'Rekapitulasi Status Keberfungsian Infrastruktur';
   document.getElementById('banner-sub').textContent = 'Tahun Anggaran 2020-2024';
   banner.style.display = 'block';
-
-  // small scroll to banner
   setTimeout(()=>{ banner.scrollIntoView({behavior:'smooth',block:'start'}) }, 120);
 });
 
@@ -341,11 +302,9 @@ document.getElementById('nav-dashboard').addEventListener('click', function(e){
 document.getElementById('refresh-reg').addEventListener('click', ()=>{ loadAndRender(); });
 document.getElementById('refresh-ibm').addEventListener('click', ()=>{ loadAndRender(); });
 
-/* initial load */
-loadAndRender();
-
-/* ensure page loads at top when entering without hash */
-window.addEventListener('load', () => {
+/* initial load and top scroll */
+window.addEventListener('load', ()=>{
+  loadAndRender();
   if(!location.hash) window.scrollTo(0,0);
 });
 </script>
