--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 <style>
 :root{
   --dark-bg:#0b0f17;
-  --glass: rgba(11,15,23,0.72);
+  --glass:rgba(11,15,23,0.72);
   --muted:#9fb0c6;
   --navy:#0f3556;
   --panel:#f5f7fb;
   --card:#ffffff;
   --accent:#f3b41f;
-  --accent-strong:#0b2135; /* angka kontras gelap */
+  --accent-strong:#0b2135;
   --gap:16px;
   --font-sans:"Poppins",system-ui,Arial;
 }
 
-/* BASE */
+/* base */
 html,body{height:100%;margin:0;font-family:var(--font-sans);background:var(--dark-bg);color:#fff;padding-top:72px}
 a{color:inherit;text-decoration:none}
 
-/* HEADER */
-header{position:fixed;left:0;right:0;top:0;z-index:60;padding:14px 22px;display:flex;align-items:center;justify-content:space-between;background:var(--glass);backdrop-filter:blur(6px)}
+/* header */
+header{position:fixed;left:0;right:0;top:0;z-index:60;padding:12px 20px;display:flex;align-items:center;justify-content:space-between;background:var(--glass);backdrop-filter:blur(6px)}
 .brand{display:flex;align-items:center;gap:12px}
-.brand img{height:40px}
+.brand img{height:38px}
 .site-title{font-family:'Montserrat';font-weight:800;font-size:20px}
 nav a{margin-left:18px;font-weight:600;color:#fff}
 
-/* HERO (lebih pendek) */
+/* hero */
 .hero{height:62vh;background:url('images/background-maluku.jpg') center/cover no-repeat;display:flex;align-items:center;justify-content:center;position:relative}
 .hero::after{content:'';position:absolute;inset:0;background:linear-gradient(180deg, rgba(2,6,23,0.55), rgba(2,6,23,0.78));}
 .hero-inner{position:relative;z-index:2;text-align:center;max-width:860px;padding:18px}
@@ -39,45 +39,52 @@ nav a{margin-left:18px;font-weight:600;color:#fff}
 .hero p{margin-top:8px;color:var(--muted);font-size:15px}
 .cta{display:inline-block;margin-top:18px;padding:10px 18px;border-radius:999px;background:#2b9cff;color:#021129;font-weight:700}
 
-/* SECTORS */
-.section{padding:56px 20px;max-width:1160px;margin:0 auto}
+/* sections */
+.section{padding:48px 20px;max-width:1160px;margin:0 auto}
 .sector-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px}
 .sector-card{background:#0f1720;padding:14px;border-radius:12px;display:flex;flex-direction:column;align-items:center;gap:8px}
 .sector-card img{width:44px;height:44px;object-fit:contain}
 .sector-card h3{color:var(--accent);margin:4px 0 2px;font-size:15px}
 .sector-card p{color:var(--muted);font-size:13px;margin:0;text-align:center}
 
-/* DASHBOARD WRAP */
-.dashboard{background:var(--panel);color:#222;padding:26px 16px;border-top-left-radius:12px;border-top-right-radius:12px}
+/* dashboard */
+.dashboard{background:var(--panel);color:#222;padding:24px 16px;border-top-left-radius:12px;border-top-right-radius:12px}
 .container{max-width:1120px;margin:0 auto}
 .dashboard-banner{background:linear-gradient(90deg,var(--navy),#123b66);color:#fff;padding:12px 14px;border-radius:8px;margin-bottom:12px}
 
-/* GRID */
-.cards-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-.cards-bottom{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
+/* grid centered: content will center when few items */
+.cards-grid{
+  display:grid;
+  grid-auto-rows: auto;
+  gap:12px;
+  justify-content:center; /* center items horizontally */
+  grid-template-columns: repeat(auto-fit, minmax(260px, 260px)); /* fixed card width to center nicely */
+}
+.cards-bottom{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,260px));gap:12px;justify-content:center}
 
-/* CARD */
+/* card */
 .card{background:var(--card);border:6px solid #e6e8ec;border-radius:6px;overflow:hidden;box-shadow:0 6px 18px rgba(16,26,40,0.06)}
 .card-head{
-  background:linear-gradient(180deg,var(--navy),#0b3556cc); /* gelap transparan */
+  background:linear-gradient(180deg,var(--navy),#0b3556cc);
   color:#fff;padding:14px 12px;text-align:center;
 }
 .card-head h4{margin:0;font-family:'Montserrat';font-weight:800;font-size:15px;line-height:1.05;text-align:center}
-.card-head .meta{color:#d6e8fb;margin-top:8px;font-size:13px;text-align:center}
-.card-head .jumlah{display:block;margin-top:8px;font-weight:900;font-size:18px;color:var(--accent-strong);text-align:center}
-.card-head .invest{display:block;margin-top:6px;color:var(--accent);font-weight:700}
+.card-head .label-small{display:block;margin-top:8px;font-size:12px;color:#d6e8fb;font-weight:600;letter-spacing:0.02em}
+.card-head .jumlah{display:block;margin-top:8px;font-weight:900;font-size:20px;color:var(--accent-strong);text-align:center}
+.card-head .invest-label{display:block;margin-top:8px;font-size:12px;color:#cfe0f3;font-weight:600}
+.card-head .invest-value{display:block;margin-top:6px;color:var(--accent);font-weight:800;font-size:14px}
 
-/* BODY */
+/* body */
 .body{padding:10px;border-top:6px solid #e8eef6;background:linear-gradient(180deg,#fff,#f6f9ff)}
 .section-title{background:var(--navy);color:#fff;padding:6px 10px;font-weight:700;margin:-10px -10px 8px -10px;font-size:12px}
 .card table{width:100%;border-collapse:collapse;font-size:13px}
 .card td{padding:6px 8px;border-bottom:1px solid #eef3fb}
 .card .k{color:#24333f}
-.card .v{text-align:right;color:var(--muted-strong)}
+.card .v{text-align:right;color:#5b6b7a}
 
 /* responsive */
-@media(max-width:1000px){.cards-grid{grid-template-columns:repeat(2,1fr)}.cards-bottom{grid-template-columns:1fr}}
-@media(max-width:640px){.cards-grid{grid-template-columns:1fr}}
+@media(max-width:900px){.cards-grid{grid-template-columns:repeat(auto-fit,minmax(220px,220px));}.cards-bottom{grid-template-columns:repeat(auto-fit,minmax(220px,220px))}}
+@media(max-width:640px){.cards-grid{grid-template-columns:1fr}.cards-bottom{grid-template-columns:1fr}}
 </style>
 </head>
 <body>
@@ -147,6 +154,7 @@ nav a{margin-left:18px;font-weight:600;color:#fff}
 
     <div style="height:12px"></div>
     <div id="cards-ibm-bottom" class="cards-bottom"></div>
+
   </div>
 </section>
 
@@ -155,39 +163,35 @@ nav a{margin-left:18px;font-weight:600;color:#fff}
 </footer>
 
 <script>
-/* helper load */
+/* util */
 async function loadJSON(path){
-  try{
-    const r = await fetch(path, {cache:'no-store'});
-    if(!r.ok) return [];
-    return await r.json();
-  }catch(e){ console.error(e); return []; }
+  try{ const r = await fetch(path, {cache:'no-store'}); if(!r.ok) return []; return await r.json(); }catch(e){ console.error(e); return []; }
 }
-function pick(o, keys){ for(const k of keys) if(o && (o[k] !== undefined && o[k] !== null)) return o[k]; return null; }
-function formatInvest(v){
-  if(v === null || v === undefined || v === '') return 'Rp 0';
-  const n = Number(String(v).replace(/[^0-9.-]+/g,''));
-  if(!isNaN(n)) return 'Rp ' + n.toLocaleString('id-ID', {minimumFractionDigits:2, maximumFractionDigits:2}) + ' Miliar';
-  return String(v);
-}
+function pick(o,keys){ for(const k of keys) if(o && (o[k] !== undefined && o[k] !== null && String(o[k]).trim() !== '')) return o[k]; return null; }
+function formatInvest(v){ if(v===null||v===undefined||v==='') return 'Rp 0'; const n=Number(String(v).replace(/[^0-9.-]+/g,'')); if(!isNaN(n)) return 'Rp '+n.toLocaleString('id-ID',{minimumFractionDigits:2,maximumFractionDigits:2})+' Miliar'; return String(v); }
 
-/* build card: full title prefix + centered */
-function cardHTML_full(titlePrefix, name, jumlah, investasi, utilisasiRows, statusRows){
-  const titleText = (titlePrefix ? titlePrefix + ' ' : '') + (name || '-');
-  const utilHtml = (utilisasiRows && utilisasiRows.length) ? utilisasiRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('') : `<tr><td class="k">-</td><td class="v">-</td></tr>`;
-  const statusHtml = (statusRows && statusRows.length) ? statusRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('') : `<tr><td class="k">-</td><td class="v">-</td></tr>`;
+/* card builder:
+   - do not render Utilisasi section when empty
+   - labels JUMLAH and NILAI INVESTASI shown and centered
+*/
+function cardHTML_full(prefix, name, jumlah, investasi, utilisasiRows, statusRows){
+  const utilExists = Array.isArray(utilisasiRows) && utilisasiRows.length > 0;
+  const utilHtml = utilExists ? utilisasiRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('') : '';
+  const statusHtml = Array.isArray(statusRows) && statusRows.length ? statusRows.map(r=>`<tr><td class="k">${r[0]}</td><td class="v">${r[1]||'-'}</td></tr>`).join('') : `<tr><td class="k">-</td><td class="v">-</td></tr>`;
+
   return `
-    <div class="card">
+    <div class="card" role="article" aria-label="${prefix} ${name}">
       <div class="card-head">
-        <h4 style="text-transform:capitalize">${titleText}</h4>
-        <div class="meta">Jumlah <span class="jumlah">${jumlah||'-'}</span></div>
-        <div class="invest">${investasi||'Rp 0'}</div>
+        <h4 style="text-align:center">${prefix} ${name}</h4>
+        <span class="label-small">JUMLAH</span>
+        <span class="jumlah">${jumlah||'-'}</span>
+        <span class="invest-label">NILAI INVESTASI</span>
+        <span class="invest-value">${investasi||'Rp 0'}</span>
       </div>
-      <div class="body">
-        <div class="section-title">Utilisasi</div>
-        <table>${utilHtml}</table>
-      </div>
-      <div class="body" style="padding-top:6px">
+
+      ${ utilExists ? `<div class="body"><div class="section-title">Utilisasi</div><table>${utilHtml}</table></div>` : '' }
+
+      <div class="body" style="${utilExists ? 'padding-top:6px' : ''}">
         <div class="section-title">Status Keberfungsian</div>
         <table>${statusHtml}</table>
       </div>
@@ -195,7 +199,7 @@ function cardHTML_full(titlePrefix, name, jumlah, investasi, utilisasiRows, stat
   `;
 }
 
-/* map JSON -> fields (use full 'Infrastruktur Sektor' prefix for reguler; 'Infrastruktur IBM' for ibm) */
+/* map item */
 function mapFields(item, type){
   const name = pick(item, ['Sektor','Program','Nama','Nama Program']) || '-';
   const jumlahRaw = pick(item, ['Jumlah Unit','Jumlah','Unit']) || '-';
@@ -204,7 +208,7 @@ function mapFields(item, type){
   const util = [];
   const kt = pick(item, ['Kapasitas Terpasang','Kapasitas terpasang']);
   const kp = pick(item, ['Kapasitas Terpakai','Kapasitas terpakai']);
-  const idle = pick(item, ['Idle Capacity','Idle']);
+  const idle = pick(item, ['Idle Capacity','Idle','Idle Capacity (L/detik)']);
   const luasPen = pick(item, ['Luas Penanganan']);
   const luasKaw = pick(item, ['Luas Kawasan','Luas Total Kawasan']);
   if(kt!==null) util.push(['Kapasitas Terpasang', String(kt)]);
@@ -222,47 +226,44 @@ function mapFields(item, type){
   return { prefix, name, jumlah, invest, util, status };
 }
 
-/* render functions */
-function renderFive(containerId, list, type){
-  const c = document.getElementById(containerId);
-  c.innerHTML = '';
-  const arr = Array.isArray(list) ? list.slice(0,5) : [];
-  for(let i=0;i<5;i++){
-    const item = arr[i] || null;
-    if(item){
-      const f = mapFields(item, type);
-      c.insertAdjacentHTML('beforeend', cardHTML_full(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
-    } else {
-      // show empty but without word "Kosong"
-      c.insertAdjacentHTML('beforeend', cardHTML_full((type==='reg'?'Infrastruktur Sektor':'Infrastruktur IBM'), '-', '-', 'Rp 0', [], [['Berfungsi','-'],['Tidak Berfungsi','-']]));
-    }
+/* render functions: only render available items; center grid automatically */
+function renderCards(containerId, dataArray, type, limit=5){
+  const container = document.getElementById(containerId);
+  container.innerHTML = '';
+  const list = Array.isArray(dataArray) ? dataArray.slice(0,limit) : [];
+  if(list.length === 0){ 
+    // show placeholder empty space (not card) to avoid clutter
+    container.innerHTML = `<div style="padding:22px;color:#6b7c8e">Tidak ada data.</div>`;
+    return;
   }
-}
-function renderTwo(containerId, list){
-  const c = document.getElementById(containerId);
-  c.innerHTML = '';
-  const arr = Array.isArray(list) ? list.slice(5,7) : [];
-  for(let i=0;i<2;i++){
-    const item = arr[i] || null;
-    if(item){
-      const f = mapFields(item, 'ibm');
-      c.insertAdjacentHTML('beforeend', cardHTML_full(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
-    } else {
-      c.insertAdjacentHTML('beforeend', cardHTML_full('Infrastruktur IBM','-','-','Rp 0',[],[['Berfungsi','-'],['Tidak Berfungsi','-']]));
-    }
-  }
+  list.forEach(item=>{
+    const f = mapFields(item, type);
+    container.insertAdjacentHTML('beforeend', cardHTML_full(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
+  });
 }
 
-/* main loader */
+/* render bottom optional two */
+function renderBottom(containerId, dataArray){
+  const container = document.getElementById(containerId);
+  container.innerHTML = '';
+  const arr = Array.isArray(dataArray) ? dataArray.slice(5,7) : [];
+  if(arr.length === 0) return;
+  arr.forEach(item=>{
+    const f = mapFields(item, 'ibm');
+    container.insertAdjacentHTML('beforeend', cardHTML_full(f.prefix, f.name, f.jumlah, f.invest, f.util, f.status));
+  });
+}
+
+/* main */
 async function loadAndShow(){
   const reg = await loadJSON('data/rekap_reguler.json');
   const ibm = await loadJSON('data/rekap_ibm.json');
-  renderFive('cards-reg', reg, 'reg');
-  renderFive('cards-ibm', ibm, 'ibm');
-  renderTwo('cards-ibm-bottom', ibm);
+  renderCards('cards-reg', reg, 'reg', 5);
+  renderCards('cards-ibm', ibm, 'ibm', 5);
+  renderBottom('cards-ibm-bottom', ibm);
 }
 
-/* banner on nav click */
+/* banner behavior */
 document.getElementById('nav-dashboard').addEventListener('click', function(){
   const b = document.getElementById('dashboard-banner');
   b.style.display = 'block';
